--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang = "en" dir = "ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset = "utf-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="index.css">
+    <link rel = "stylesheet" href = "index.css">
     <title>UI Widgets</title>
   </head>
   <body>
     <div class = "Hamburger-Menu">
-
+        <a href = "" id = "menu-icon" > <img src = "img/hamburger.png" alt = "Hamburger-icon"/> </a>
+        <div class = "dropdown">
+          <a href = "" id = "menu-dropdown">
+            <a href = "" id = "menu-close">
+              <img src = "img/close.jpg" alt = "Close menu"/>
+            </a>
+            <ul>
+              <li> <a href = "#"> About </a> </li>
+              <li> <a href = "#"> Menu </a> </li>
+              <li> <a href = "#"> Contact </a> </li>
+            </ul>
+          </a>
+        </div>
     </div>
   </body>
 </html>
