--- a/index.html
+++ b/index.html
@@ -8,19 +8,16 @@
   </head>
   <body>
     <div class = "Hamburger-Menu">
-        <a href = "" id = "menu-icon" > <img src = "img/hamburger.png" alt = "Hamburger-icon"/> </a>
-        <div class = "dropdown">
-          <a href = "" id = "menu-dropdown">
-            <a href = "" id = "menu-close">
-              <img src = "img/close.jpg" alt = "Close menu"/>
-            </a>
+        <h1> Hamburger Menu </h1>
+        <a href = "#menu-dropdown" id = "menu-icon" > <img src = "img/hamburger.png" alt = "Hamburger-icon"/> </a>
+          <nav id = "menu-dropdown">
+            <a href = "#menu-icon" id = "menu-close"> <img src = "img/close.jpg" alt = "Close menu"/> </a>
             <ul>
               <li> <a href = "#"> About </a> </li>
               <li> <a href = "#"> Menu </a> </li>
               <li> <a href = "#"> Contact </a> </li>
             </ul>
-          </a>
-        </div>
+          </nav>
     </div>
   </body>
 </html>
