Update front/back button styles

--- a/hamburger-menu.html
+++ b/hamburger-menu.html
@@ -18,7 +18,7 @@
               <li> <a href = "#"> Contact </a> </li>
             </ul>
           </nav>
-          <a href = "index.html" class = "prev-btn"> Prev </a>
+          <a href = "index.html" class = "prev-btn"> &larr; </a>
     </div>
   </body>
 </html>
