--- a/lazy-load.html
+++ b/lazy-load.html
@@ -34,7 +34,7 @@
           let target = entries[0];
           if(target.isIntersecting){
               console.log("intersecting...")
-              appendData();
+              setTimeout(()=> appendData(),2000);
           }
         }
 
