update folder structure

--- a/widgets/lazy-load.html
+++ b/widgets/lazy-load.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1">
     <title> Lazy Load with IntersectionObserver API</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../index.css">
   </head>
   <body>
       <div id="Lazy-load-area">
           <h1> Lazy Load </h1>
           <ul id ="lazy-load-list"></ul>
           <div id = "loader">Loading...</div>
+          <a href = "hamburger-menu.html" class = "prev-btn"> &larr; </a>
       </div>
 
       <script type ="text/javascript">
