--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="UI-Widgets">
       <h1> UI Widgets </h1>
-      <a href = "hamburger-menu.html" class = "next-btn"> &rarr; </a>
+      <a href = "widgets/hamburger-menu.html" class = "next-btn"> &rarr; </a>
     </div>
   </body>
 </html>
