--- a/widgets/hamburger-menu.html
+++ b/widgets/hamburger-menu.html
@@ -3,22 +3,23 @@
   <head>
     <meta charset="utf-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1">
-    <link rel = "stylesheet" href = "index.css">
+    <link rel = "stylesheet" href = "../index.css">
     <title>Hamburger Menu</title>
   </head>
   <body>
     <div class = "Hamburger-Menu">
         <h1> Hamburger Menu </h1>
-        <a href = "#menu-dropdown" id = "menu-icon" > <img src = "img/hamburger.png" alt = "Hamburger-icon"/> </a>
+        <a href = "#menu-dropdown" id = "menu-icon" > <img src = "../img/hamburger.png" alt = "Hamburger-icon"/> </a>
           <nav id = "menu-dropdown">
-            <a href = "#menu-icon" id = "menu-close"> <img src = "img/close.jpg" alt = "Close menu"/> </a>
+            <a href = "#menu-icon" id = "menu-close"> <img src = "../img/close.jpg" alt = "Close menu"/> </a>
             <ul>
               <li> <a href = "#"> About </a> </li>
               <li> <a href = "#"> Menu </a> </li>
               <li> <a href = "#"> Contact </a> </li>
             </ul>
           </nav>
-          <a href = "index.html" class = "prev-btn"> &larr; </a>
+          <a href = "../index.html" class = "prev-btn"> &larr; </a>
+          <a href = "lazy-load.html" class = "next-btn"> &rarr; </a>
     </div>
   </body>
 </html>
