Add links to navigate

--- a/widgets/buttonPopup-WebComp.html
+++ b/widgets/buttonPopup-WebComp.html
@@ -15,10 +15,12 @@
   </head>
   <body>
       <div class = "btn-popup-container">
+        <h1> Button On Hover </h1>
         <div class = "img-placeholder">
           <img src = "https://picsum.photos/id/1025/500" alt = "Image Placeholder"/>
           <button-popup></button-popup>
         </div>
+        <a href = "lazy-load.html" class = "prev-btn"> &larr; </a>
       </div>
   </body>
 </html>
