--- a/widgets/lazy-load.html
+++ b/widgets/lazy-load.html
@@ -12,6 +12,7 @@
           <ul id ="lazy-load-list"></ul>
           <div id = "loader">Loading...</div>
           <a href = "hamburger-menu.html" class = "prev-btn"> &larr; </a>
+          <a href = "buttonPopup-WebComp.html" class = "next-btn"> &rarr; </a>
       </div>
 
       <script type ="text/javascript">
