Update links to previous widgets

--- a/widgets/buttonPopup-WebComp.html
+++ b/widgets/buttonPopup-WebComp.html
@@ -22,6 +22,7 @@
           <button-popup></button-popup>
         </div>
         <a href = "lazy-load.html" class = "prev-btn"> &larr; </a>
+        <a href = "paginate.html" class = "next-btn"> &rarr; </a>
       </div>
   </body>
 </html>
