--- a/widgets/progressbar.html
+++ b/widgets/progressbar.html
@@ -6,10 +6,22 @@
     <link rel="stylesheet" href="../index.css">
   </head>
   <body>
+    <div class = "progress-bar-container">
     <div class = "progressBar">
       <div class = "progress-icon"></div>
     </div>
+    <button onclick = "showprogress(2)"> Start </button>
+    </div>
     <script>
+      let progressIcon = document.querySelector('.progress-icon');
+      function showprogress(wait){
+        let counter = 1;
+        let timer = setInterval(()=>{
+            progressIcon.style.width = `${counter}%`;
+            counter++;
+            if(counter>=100) clearInterval(timer);
+        },(wait*1000)/100);
+      }
     </script>
   </body>
 </html>
