Update links to widgets

--- a/widgets/paginate.html
+++ b/widgets/paginate.html
@@ -12,6 +12,7 @@
     <div class = "paginate">
       <h1 id="root"></h1>
       <a href = "buttonPopup-WebComp.html" class = "prev-btn"> &larr; </a>
+      <a href = "progressbar.html" class = "next-btn"> &rarr; </a>
     </div>
 
     <script type="text/babel">
