--- a/widgets/progressbar.html
+++ b/widgets/progressbar.html
@@ -7,10 +7,12 @@
   </head>
   <body>
     <div class = "progress-bar-container">
+      <h1> Progress bar </h1>
       <div class = "progressBar">
         <div class = "progress-icon"></div>
       </div>
       <button onclick = "showprogress(2)"> Start </button>
+      <a href = "paginate.html" class = "prev-btn"> &larr; </a>
     </div>
     <script>
       let progressIcon = document.querySelector('.progress-icon');
