update page layout

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>UI Widgets</title>
   </head>
   <body>
-    <div class="UI-Widgets">
+    <div class="UI-Widgets page-center">
       <h1> UI Widgets </h1>
       <a href = "widgets/hamburger-menu.html" class = "next-btn"> &rarr; </a>
     </div>
