--- a/widgets/buttonPopup-WebComp.html
+++ b/widgets/buttonPopup-WebComp.html
@@ -15,7 +15,7 @@
     </script>
   </head>
   <body>
-      <div class = "btn-popup-container">
+      <div class = "btn-popup-container col-1">
         <h1> Button On Hover </h1>
         <div class = "img-placeholder">
           <img src = "https://picsum.photos/id/1025/500" alt = "Image Placeholder"/>
