--- a/widgets/lazy-load.html
+++ b/widgets/lazy-load.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../index.css">
   </head>
   <body>
-      <div id="Lazy-load-area">
+      <div id="Lazy-load-area" class = "col-1">
           <h1> Lazy Load </h1>
           <ul id ="lazy-load-list"></ul>
           <div id = "loader">Loading...</div>
