--- a/widgets/hamburger-menu.html
+++ b/widgets/hamburger-menu.html
@@ -7,19 +7,23 @@
     <title>Hamburger Menu</title>
   </head>
   <body>
-    <div class = "Hamburger-Menu">
-        <h1> Hamburger Menu </h1>
-        <a href = "#menu-dropdown" id = "menu-icon" > <img src = "../img/hamburger.png" alt = "Hamburger-icon"/> </a>
-          <nav id = "menu-dropdown">
-            <a href = "#menu-icon" id = "menu-close"> <img src = "../img/close.jpg" alt = "Close menu"/> </a>
-            <ul>
-              <li> <a href = "#"> About </a> </li>
-              <li> <a href = "#"> Menu </a> </li>
-              <li> <a href = "#"> Contact </a> </li>
-            </ul>
-          </nav>
-          <a href = "../index.html" class = "prev-btn"> &larr; </a>
-          <a href = "lazy-load.html" class = "next-btn"> &rarr; </a>
-    </div>
+    <div class = "page-center">
+      <div class = "Hamburger-Menu col-1">
+          <h1> Hamburger Menu </h1>
+          <a href = "#menu-dropdown" id = "menu-icon" > <img src = "../img/hamburger.png" alt = "Hamburger-icon"/> </a>
+            <nav id = "menu-dropdown">
+              <a href = "#menu-icon" id = "menu-close"> <img src = "../img/close.jpg" alt = "Close menu"/> </a>
+              <ul>
+                <li> <a href = "#"> About </a> </li>
+                <li> <a href = "#"> Menu </a> </li>
+                <li> <a href = "#"> Contact </a> </li>
+              </ul>
+            </nav>
+            <a href = "../index.html" class = "prev-btn"> &larr; </a>          
+      </div>
+      <div class = 'col-2'>
+        <a href = "lazy-load.html" class = "next-btn"> &rarr; </a>
+      </div>
+  </div>
   </body>
 </html>
