--- a/widgets/paginate.html
+++ b/widgets/paginate.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../index.css">
   </head>
   <body>
-    <div class = "paginate">
+    <div class = "paginate col-1">
       <h1 id="root"></h1>
       <a href = "buttonPopup-WebComp.html" class = "prev-btn"> &larr; </a>
       <a href = "progressbar.html" class = "next-btn"> &rarr; </a>
