--- a/widgets/progressbar.html
+++ b/widgets/progressbar.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../index.css">
   </head>
   <body>
-    <div class = "progress-bar-container">
+    <div class = "progress-bar-container col-1">
       <h1> Progress bar </h1>
       <div class = "progressBar">
         <div class = "progress-icon"></div>
