--- a/widgets/lazy-load.html
+++ b/widgets/lazy-load.html
@@ -7,13 +7,17 @@
     <link rel="stylesheet" href="../index.css">
   </head>
   <body>
+    <div class = "page-center">
       <div id="Lazy-load-area" class = "col-1">
           <h1> Lazy Load </h1>
           <ul id ="lazy-load-list"></ul>
           <div id = "loader">Loading...</div>
-          <a href = "hamburger-menu.html" class = "prev-btn"> &larr; </a>
-          <a href = "buttonPopup-WebComp.html" class = "next-btn"> &rarr; </a>
+          <a href = "hamburger-menu.html" class = "prev-btn"> &larr; </a>      
       </div>
+      <div class = 'col-2'>
+        <a href = "buttonPopup-WebComp.html" class = "next-btn"> &rarr; </a>
+      </div>
+    </div>
 
       <script type ="text/javascript">
 
