update page layout of buttonpopup widget

--- a/widgets/buttonPopup-WebComp.html
+++ b/widgets/buttonPopup-WebComp.html
@@ -15,14 +15,18 @@
     </script>
   </head>
   <body>
-      <div class = "btn-popup-container col-1">
-        <h1> Button On Hover </h1>
-        <div class = "img-placeholder">
-          <img src = "https://picsum.photos/id/1025/500" alt = "Image Placeholder"/>
-          <button-popup></button-popup>
-        </div>
-        <a href = "lazy-load.html" class = "prev-btn"> &larr; </a>
-        <a href = "paginate.html" class = "next-btn"> &rarr; </a>
+      <div class = "page-center">
+          <div class = "btn-popup-container col-1">
+            <h1> Button On Hover </h1>
+            <div class = "img-placeholder">
+              <img src = "https://picsum.photos/id/1025/500" alt = "Image Placeholder"/>
+              <button-popup></button-popup>
+            </div>
+            <a href = "lazy-load.html" class = "prev-btn"> &larr; </a>
+          </div>
+          <div class = 'col-2'>
+            <a href = "paginate.html" class = "next-btn"> &rarr; </a>
+          </div>
       </div>
   </body>
 </html>
