--- a/widgets/paginate.html
+++ b/widgets/paginate.html
@@ -9,11 +9,15 @@
     <link rel="stylesheet" href="../index.css">
   </head>
   <body>
-    <div class = "paginate col-1">
-      <h1 id="root"></h1>
-      <a href = "buttonPopup-WebComp.html" class = "prev-btn"> &larr; </a>
-      <a href = "progressbar.html" class = "next-btn"> &rarr; </a>
-    </div>
+    <div class = "page-center">
+        <div class = "paginate col-1">
+          <h1 id="root"></h1>
+          <a href = "buttonPopup-WebComp.html" class = "prev-btn"> &larr; </a>
+        </div>
+        <div class = 'col-2'>
+          <a href = "progressbar.html" class = "next-btn"> &rarr; </a>
+        </div>
+   </div>
 
     <script type="text/babel">
     function Counter(){
