--- a/widgets/progressbar.html
+++ b/widgets/progressbar.html
@@ -6,13 +6,17 @@
     <link rel="stylesheet" href="../index.css">
   </head>
   <body>
-    <div class = "progress-bar-container col-1">
-      <h1> Progress bar </h1>
-      <div class = "progressBar">
-        <div class = "progress-icon"></div>
-      </div>
-      <button onclick = "showprogress(2)"> Start </button>
-      <a href = "paginate.html" class = "prev-btn"> &larr; </a>
+    <div class = "page-center">
+        <div class = "progress-bar-container col-1">
+          <h1> Progress bar </h1>
+          <div class = "progressBar">
+            <div class = "progress-icon"></div>
+          </div>
+          <button onclick = "showprogress(2)"> Start </button>
+          <a href = "paginate.html" class = "prev-btn"> &larr; </a>
+        </div>
+        <div class = 'col-2'>
+        </div>
     </div>
     <script>
       let progressIcon = document.querySelector('.progress-icon');
