Update code snippet - hamburger menu

--- a/widgets/hamburger-menu.html
+++ b/widgets/hamburger-menu.html
@@ -19,10 +19,17 @@
                 <li> <a href = "#"> Contact </a> </li>
               </ul>
             </nav>
-            <a href = "../index.html" class = "prev-btn"> &larr; </a>          
+            <a href = "../index.html" class = "prev-btn"> &larr; </a>
       </div>
       <div class = 'col-2'>
         <a href = "lazy-load.html" class = "next-btn"> &rarr; </a>
+        <xmp class = 'code-snippet'>
+          <a href = "#menu-dropdown" id = "menu-icon" > <img src = "../img/hamburger.png" alt = "Hamburger-icon"/> </a>
+            <nav id = "menu-dropdown">
+              <a href = "#menu-icon" id = "menu-close"> <img src = "../img/close.jpg" alt = "Close menu"/> </a>
+              <ul>...</ul>
+            </nav>
+        </xmp>
       </div>
   </div>
   </body>
