--- a/widgets/hamburger-menu.html
+++ b/widgets/hamburger-menu.html
@@ -23,10 +23,10 @@
       </div>
       <div class = 'col-2'>
         <a href = "lazy-load.html" class = "next-btn"> &rarr; </a>
-        <xmp class = 'code-snippet'>
-          <a href = "#menu-dropdown" id = "menu-icon" > <img src = "../img/hamburger.png" alt = "Hamburger-icon"/> </a>
+        <xmp class = 'code-snippet-html'>
+          <a href = "#menu-dropdown" id = "menu-icon" > <img src = "../img/hamburger.png"/> </a>
             <nav id = "menu-dropdown">
-              <a href = "#menu-icon" id = "menu-close"> <img src = "../img/close.jpg" alt = "Close menu"/> </a>
+              <a href = "#menu-icon" id = "menu-close"> <img src = "../img/close.jpg"/> </a>
               <ul>...</ul>
             </nav>
         </xmp>
