--- a/widgets/paginate.html
+++ b/widgets/paginate.html
@@ -17,7 +17,7 @@
 
         <div class = 'col-2'>
           <a href = "progressbar.html" class = "next-btn"> &rarr; </a>
-          <xmp class = "code-snippet-html">
+          <xmp class = "code-snippet-js">
             function Counter(){
               let [pageCounter, setPageCounter] = React.useState(1);
               let [data, setData] = React.useState([]);
